--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 sf-duplicates-ui/tools/jq
+sf-duplicates-ui/token.json
+node_modules
+/.env
+public/token.json
+sf-duplicates-ui/.env
+sf-duplicates-ui/public/*.json
